WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60635
Video track sometimes fails to draw
https://bugs.webkit.org/show_bug.cgi?id=60635
Summary
Video track sometimes fails to draw
Eric Carlson
Reported
2011-05-11 09:42:11 PDT
If HTMLMediaElement replaces the MediaPlayer after its display state has been set to "video", the new media engine has no way to know that it is allowed to display video. If the display state is reset whenever MediaPlayer is replaced, the media engine will get the correct state when it is recalculated. <
rdar://problem/9281951
>
Attachments
Proposed patch.
(1.47 KB, patch)
2011-05-11 10:07 PDT
,
Eric Carlson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2011-05-11 10:07:42 PDT
Created
attachment 93140
[details]
Proposed patch.
Darin Adler
Comment 2
2011-05-11 10:33:19 PDT
Comment on
attachment 93140
[details]
Proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=93140&action=review
> Source/WebCore/html/HTMLMediaElement.cpp:713 > + // Reset display mode to force a recalculation of what to show becuase we are resetting the player.
This misspells because.
Eric Carlson
Comment 3
2011-05-11 10:43:13 PDT
http://trac.webkit.org/changeset/86245
Ademar Reis
Comment 4
2011-06-03 14:10:26 PDT
Revision
r86245
cherry-picked into qtwebkit-2.2 with commit 3f5fab4 <
http://gitorious.org/webkit/qtwebkit/commit/3f5fab4
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug