2011-05-11  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Darin Adler.

        Video track sometimes fails to draw.
        https://bugs.webkit.org/show_bug.cgi?id=60635
        <rdar://problem/9281951>

        No new tests, covered by existing pixel tests.

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::loadResource): Set display mode to "Unknown" to force a
            recalculation, and media engine notification, the next time the state machine runs.



Canonical link: https://commits.webkit.org/75903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86245 268f45cc-cd09-0410-ab3c-d52691b4dbfc